# marketboss-crm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/db/: deals.json  leads.json  metric-snapshots.json  tasks.json
data/schemas/: deal.schema.json  lead.schema.json  metric-snapshot.schema.json  task.schema.json
docs/: AGENT_OPERATING_MODEL.md  ARCHITECTURE.md  ARCHITECTURE_DECISION_RECORD.md  CHANGELOG_SPRINT1.md  COMPETITIVE_MATRIX.md  CONTEXT_MAP.md  CONTEXT_RATIONALE.md  CURRENT_STATE_2026-02-25.md  DOMAIN_MODEL.md  EVENT_CONTRACTS_V1.md  IMPLEMENTATION_LOG.md  NEXT_STEPS.md  REALTIME_CONTROL_TOWER_SPEC.md  ROADMAP.md  STRUCTURE.md  TECH_STACK.md
scripts/: run_local.sh  run_web.sh  run_windows.ps1  seed_demo.py  seed_docker.sh  seed_windows.ps1
src/application/: services.py
src/application/contracts/: event_bus.py
src/domain/analytics_bi/: entities.py
src/domain/deal_strategy/: entities.py
src/domain/executive_control/: entities.py
src/domain/lead_intake/: entities.py
src/infrastructure/: persistence.py
src/infrastructure/eventbus/: in_memory.py
src/interfaces/: cli.py
src/interfaces/http/: app.py
src/interfaces/http/templates/: dashboard.html
src/shared/: events.py  types.py
