[project]
name = "marketboss-crm-core"
version = "0.1.0"
description = "MarketBoss CRM Core (Clean Architecture + DDD + EventBus)"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "ruff>=0.6",
  "pytest>=8.3",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
